# visage

tools/: README.md  extract_cursor.py
visage_app/: application_editor.cpp  application_editor.h  application_window.h
visage_graphics/: CMakeLists.txt  canvas.cpp  canvas.h  font.cpp  font.h  shape_batcher.cpp
visage_utils/: events.h
visage_windowing/: windowing.h
visage_windowing/emscripten/: windowing_emscripten.cpp
visage_windowing/macos/: windowing_macos.mm
visage_windowing/win32/: cursor_data.h  windowing_win32.cpp
